# agent_demo

./: .gitignore
agent_demo/multi-agent-1/: pyproject.toml  subagent_middleware.py  test_multi_agent.py
agent_demo/multi_agent_1/: README.md  __init__.py  pyproject.toml  test_multi_agent.py
agent_demo/multi_agent_1/backend/: file_system.py  protocol.py  state.py  utils.py
agent_demo/multi_agent_1/middle_ware/: file_middleware.py  subagent_middleware.py
agent_demo/multi_agent_1/utils/: __init__.py  message_utils.py
agent_demo/test_only_one_agent/: test1.py
